--- a/style.css
+++ b/style.css
@@ -1,34 +1,187 @@
 *{
     margin: 0%;
     padding: 0%;
+    font-family: 'Be Vietnam Pro';
 }
 /*Cabecera/Nav*/
 header{
-    background-color: rgb(243, 243, 170);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: row;
     align-items: center;
-
+    padding:50px 140px 50px 140px;
+}
+nav ul{ 
+     display: flex;
+     flex-direction: row;
+     list-style: none;
+  
+}
+nav ul li{
+    margin: 10px;
 }
 
-header nav{
-   
-}
-
-header nav ul li{
-
-}
 
 /*Cuerpo*/
-main{
-    background-color:pink;
+
+/*portada*/
+.portada{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    text-align: right;
+    padding: 50px;
 }
+
+h1{
+    font-size: 50px;
+    color: #232C50;
+}
+
+.cont-1{
+    width:450px;
+    height:399px;
+    color: white;
+}
+
+/*franja1*/
+.franja{
+    display: block;
+    background-color: #8B48BF;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 168px;
+}
+
+h2{
+    color: white;
+    font-size: 36px;
+    width: 400px;
+}
+
+.subcont{
+    width:450px ;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: white;
+}
+
+/*contenedor1*/
+.contenedor1{
+    background-color: #FAFAFA;
+}
+
+.cont1{
+    padding: 20px;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    line-height: 30px;
+}
+
+.subcount1{
+    display: flex;
+    text-align: left;
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+
+.prueba1{
+    width: 437px;
+}
+
+/*contenedor2*/
+
+.contenedor2{
+    text-align: center;
+    margin: 0px 30px 0px 30px;
+    line-height: 150px;
+    
+}
+
+.cont2{
+    background-color: #FAFAFA;
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    line-height: 30px;
+    padding: 10px;
+}
+
+.img123{
+    position: relative;
+    top: -30px;
+}
+
+h5{
+    position: relative;
+    top: -20px;
+    font-size: 16px;
+    color: #323851;
+}
+
+h3{
+    font-size: 39px;
+    color: #323851;
+}
+
 /*Footer*/
 footer{
+    padding:50px 140px 50px 140px;
     background-color: #1E1E26;
-    ;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
 }
+
+footer ul{ font-family: Be Vietnam;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0em;
+    text-align: left;
+    list-style: none;
+}
+
+.update-form {
+    display: flex;
+    align-items: center;
+    width: 201px;
+  }
+  
+  .update-input {
+    flex: 1;
+    padding: 10px;
+    font-size: 13px;
+    border-radius: 15px;
+  }
+
+.listfooter{
+    color: white;
+    list-style: none;
+}
+
+.listfooter ul{
+    line-height: 35px;
+}
+
+.letra1{
+    color: #000000;
+    padding:30px 0px;
+}
+
+.letra2{
+    padding-top: 10px;
+    color: #8C8C94;
+    font-size: 12px;
+}
+  
 
 /*Generales*/
 #btn-contacto {
@@ -43,3 +196,38 @@ footer{
   #btn-contacto:hover {
     background-color: #ba60ff;
   }
+
+  #btn-contacto2 {
+    background-color: white;
+    color: #8B48BF;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+  }
+  
+  #btn-contacto2:hover {
+    background-color: #d49ffd;
+  }
+
+  p{
+    font-size: 16px;
+    color: #B9B9C1;
+  }
+
+  .p1{
+    font-size: 16px;
+    color: #B9B9C1;
+    padding: 20px;
+  }
+
+  #btn-contacto3{
+    position: relative;
+    left: -60px;
+    background-color: #8B48BF;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+}
