--- a/styleprueba.css
+++ b/styleprueba.css
@@ -10,4 +10,25 @@
   #btn-contacto:hover {
     background-color: #45a049;
   }
+
+/*_______________________________________*/
+  .update-form {
+    display: flex;
+    align-items: center;
+  }
+  
+  .update-input {
+    flex: 1;
+    padding: 10px;
+    font-size: 16px;
+  }
+  
+  .go-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
   
