--- a/style.css
+++ b/style.css
@@ -28,9 +28,11 @@ nav ul li{
 .portada{
     display: flex;
     justify-content: space-around;
+    align-items: center;
     flex-direction: row;
     text-align: right;
-    padding: 50px;
+    padding: 150px;
+    color: white;
 }
 
 h1{
@@ -38,11 +40,6 @@ h1{
     color: #232C50;
 }
 
-.cont-1{
-    width:450px;
-    height:399px;
-    color: white;
-}
 
 /*franja1*/
 .franja{
